add event listener

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <option value="">Select type</option>
                     </select>
                     <input type="text" name="quantity" id="quantity-input" placeholder="Enter quantity">
-                    <button type="button" onclick="return calculate();">Calculate</button>
+                    <button type="button" id="calc-button">Calculate</button>
                 </div>
                 <div class="calc-result">
                     <h2>Result: </h2>
