--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="calc-body">
                 <div class="calc-input">
                     <select name="products" id="products-select">
-                        <option value="">Select type</option>
+                        <option value="no-value">Select type</option>
                     </select>
                     <input type="text" name="quantity" id="quantity-input" placeholder="Enter quantity">
                     <button type="button" id="calc-button">Calculate</button>
